chore: bump API to latest spec
